--- a/index.html
+++ b/index.html
@@ -344,6 +344,9 @@
                         <a href="https://twitter.com/TwitterCanada?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="white-text"> 
                             <i class="fab fa-twitter fa-3x"></i>
                         </a>
+                        <a href="https://www.pinterest.com/search/pins/?q=canada&rs=typed" target="_blank" class="white-text"> 
+                            <i class="fab fa-pinterest fa-3x"></i>
+                        </a>
                     </div>
                     <div class="copyRight">
                         <p> &copy; Justin Gira 2020</p>
